# MorningClock

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
.github/workflows/: main.yml
components/board/: CMakeLists.txt  Kconfig.projbuild  component.mk
components/board/morningclock/: board_def.h  board_pins_config.c
main/: CMakeLists.txt  MorningRing.cpp  base.cpp  base.hpp  idf_component.yml
main/clock/ui/: screen.cpp  screen.hpp
main/clock/ui/components/: component.cpp  component.hpp  emoji.cpp  emoji.hpp  splatter.cpp  splatter.hpp
main/light/: SPI_ws2812.cpp  SPI_ws2812.hpp  common.hpp  light.cpp  light.hpp
main/light/modes/: common_modes.cpp  common_modes.hpp
main/system/: storage.cpp  storage.hpp
main/utils/: png_reader.cpp  png_reader.hpp
